Always hide KeePass QuickFind

--- a/QuickSearch/app.config
+++ b/QuickSearch/app.config
@@ -7,49 +7,46 @@
     </configSections>
     <userSettings>
         <QuickSearch.Properties.Settings>
-            <setting name="SearchInTitle" serializeAs="String">
+            <setting name="SearchInTitle" serializeAs="string">
                 <value>True</value>
             </setting>
-            <setting name="SearchInUrl" serializeAs="String">
+            <setting name="SearchInUrl" serializeAs="string">
                 <value>True</value>
             </setting>
-            <setting name="SearchCaseSensitive" serializeAs="String">
+            <setting name="SearchCaseSensitive" serializeAs="string">
                 <value>False</value>
             </setting>
-            <setting name="BackColorOnError" serializeAs="String">
+            <setting name="BackColorOnError" serializeAs="string">
                 <value>228, 160, 143</value>
             </setting>
-            <setting name="FocusOnOpen" serializeAs="String">
+            <setting name="FocusOnOpen" serializeAs="string">
                 <value>True</value>
             </setting>
-            <setting name="SearchInUserName" serializeAs="String">
+            <setting name="SearchInUserName" serializeAs="string">
                 <value>False</value>
             </setting>
-            <setting name="SearchInNotes" serializeAs="String">
+            <setting name="SearchInNotes" serializeAs="string">
                 <value>False</value>
             </setting>
-            <setting name="SearchInGroupName" serializeAs="String">
+            <setting name="SearchInGroupName" serializeAs="string">
                 <value>False</value>
             </setting>
-            <setting name="SearchInOther" serializeAs="String">
+            <setting name="SearchInOther" serializeAs="string">
                 <value>False</value>
             </setting>
-            <setting name="ShowQuickFind" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="BackColorSearching" serializeAs="String">
+            <setting name="BackColorSearching" serializeAs="string">
                 <value>204, 201, 145</value>
             </setting>
-            <setting name="BackColorSuccess" serializeAs="String">
+            <setting name="BackColorSuccess" serializeAs="string">
                 <value>216, 233, 214</value>
             </setting>
-            <setting name="BackColorNormalUnFocused" serializeAs="String">
+            <setting name="BackColorNormalUnFocused" serializeAs="string">
                 <value>White</value>
             </setting>
-            <setting name="BackColorNormalFocused" serializeAs="String">
+            <setting name="BackColorNormalFocused" serializeAs="string">
                 <value>255, 255, 206</value>
             </setting>
-            <setting name="ControlWidth" serializeAs="String">
+            <setting name="ControlWidth" serializeAs="string">
                 <value>200</value>
             </setting>
         </QuickSearch.Properties.Settings>
