--- a/QuickSearch/app.config
+++ b/QuickSearch/app.config
@@ -7,43 +7,43 @@
     </configSections>
     <userSettings>
         <QuickSearch.Properties.Settings>
-            <setting name="SearchInTitle" serializeAs="string">
+            <setting name="SearchInTitle" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="SearchInUrl" serializeAs="string">
+            <setting name="SearchInUrl" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="SearchCaseSensitive" serializeAs="string">
+            <setting name="SearchCaseSensitive" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="BackColorOnError" serializeAs="string">
-                <value>228, 160, 143</value>
+            <setting name="BackColorOnError" serializeAs="String">
+                <value>255, 192, 192</value>
             </setting>
-            <setting name="SearchInUserName" serializeAs="string">
+            <setting name="SearchInUserName" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="SearchInNotes" serializeAs="string">
+            <setting name="SearchInNotes" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="SearchInGroupName" serializeAs="string">
+            <setting name="SearchInGroupName" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="SearchInOther" serializeAs="string">
+            <setting name="SearchInOther" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="BackColorSearching" serializeAs="string">
-                <value>204, 201, 145</value>
+            <setting name="BackColorSearching" serializeAs="String">
+                <value>255, 247, 204</value>
             </setting>
-            <setting name="BackColorSuccess" serializeAs="string">
-                <value>216, 233, 214</value>
+            <setting name="BackColorSuccess" serializeAs="String">
+                <value>230, 247, 233</value>
             </setting>
-            <setting name="BackColorNormalUnFocused" serializeAs="string">
-                <value>White</value>
+            <setting name="BackColorNormalUnFocused" serializeAs="String">
+                <value>WhiteSmoke</value>
             </setting>
-            <setting name="BackColorNormalFocused" serializeAs="string">
-                <value>255, 255, 206</value>
+            <setting name="BackColorNormalFocused" serializeAs="String">
+                <value>229, 243, 255</value>
             </setting>
-            <setting name="ControlWidth" serializeAs="string">
+            <setting name="ControlWidth" serializeAs="String">
                 <value>200</value>
             </setting>
         </QuickSearch.Properties.Settings>
