use CTRL+E to focus search box
Implemented KeyboardHook class to capture and handle key events, CTRL+E would otherwise already be consumed, if the evenet reaches the plugin.

--- a/QuickSearch/QuickSearch.csproj
+++ b/QuickSearch/QuickSearch.csproj
@@ -59,6 +59,7 @@
     <Compile Include="OptionsControl.Designer.cs">
       <DependentUpon>OptionsControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="KeyboardHook.cs" />
     <Compile Include="SearchStatus.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
