--- a/QuickSearch/app.config
+++ b/QuickSearch/app.config
@@ -28,6 +28,9 @@
             <setting name="SearchInGroupName" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SearchInTags" serializeAs="String">
+                <value>False</value>
+            </setting>
             <setting name="SearchInOther" serializeAs="String">
                 <value>False</value>
             </setting>
