--- a/QuickSearch/Properties/Settings.settings
+++ b/QuickSearch/Properties/Settings.settings
@@ -5,19 +5,19 @@
     <Setting Name="SearchInTitle" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="SearchInUrl" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="SearchCaseSensitive" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
-    </Setting>
-    <Setting Name="BackColorOnError" Type="System.Drawing.Color" Scope="User">
-      <Value Profile="(Default)">255, 192, 192</Value>
-    </Setting>
     <Setting Name="SearchInUserName" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SearchInUrl" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
     <Setting Name="SearchInNotes" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="SearchInOther" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="SearchInGroupPath" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="SearchInGroupName" Type="System.Boolean" Scope="User">
@@ -26,14 +26,20 @@
     <Setting Name="SearchInTags" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="SearchInOther" Type="System.Boolean" Scope="User">
+    <Setting Name="SearchCaseSensitive" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="SearchIgnoreGroupSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="BackColorSuccess" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">230, 247, 233</Value>
     </Setting>
     <Setting Name="BackColorSearching" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">255, 247, 204</Value>
     </Setting>
-    <Setting Name="BackColorSuccess" Type="System.Drawing.Color" Scope="User">
-      <Value Profile="(Default)">230, 247, 233</Value>
+    <Setting Name="BackColorOnError" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">255, 192, 192</Value>
     </Setting>
     <Setting Name="BackColorNormalUnFocused" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">WhiteSmoke</Value>
