--- a/QuickSearch/app.config
+++ b/QuickSearch/app.config
@@ -10,19 +10,19 @@
             <setting name="SearchInTitle" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="SearchInUrl" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SearchCaseSensitive" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="BackColorOnError" serializeAs="String">
-                <value>255, 192, 192</value>
-            </setting>
             <setting name="SearchInUserName" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SearchInUrl" serializeAs="String">
+                <value>True</value>
+            </setting>
             <setting name="SearchInNotes" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SearchInOther" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SearchInGroupPath" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="SearchInGroupName" serializeAs="String">
@@ -31,14 +31,20 @@
             <setting name="SearchInTags" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="SearchInOther" serializeAs="String">
+            <setting name="SearchCaseSensitive" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="SearchIgnoreGroupSettings" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="BackColorSuccess" serializeAs="String">
+                <value>230, 247, 233</value>
             </setting>
             <setting name="BackColorSearching" serializeAs="String">
                 <value>255, 247, 204</value>
             </setting>
-            <setting name="BackColorSuccess" serializeAs="String">
-                <value>230, 247, 233</value>
+            <setting name="BackColorOnError" serializeAs="String">
+                <value>255, 192, 192</value>
             </setting>
             <setting name="BackColorNormalUnFocused" serializeAs="String">
                 <value>WhiteSmoke</value>
