--- a/QuickSearch/QuickSearch.csproj
+++ b/QuickSearch/QuickSearch.csproj
@@ -33,6 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>IDE0017</NoWarn>
   </PropertyGroup>
   <Choose>
     <When Condition="'$(Configuration)'=='Debug'" />
