--- a/QuickSearch/app.config
+++ b/QuickSearch/app.config
@@ -47,7 +47,7 @@
                 <value>255, 192, 192</value>
             </setting>
             <setting name="BackColorNormalUnFocused" serializeAs="String">
-                <value>WhiteSmoke</value>
+                <value>245, 245, 245</value>
             </setting>
             <setting name="BackColorNormalFocused" serializeAs="String">
                 <value>229, 243, 255</value>
