--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Create Draft Release
+name: Build KeePass QuickSearch
 
 on:
   push:
@@ -40,27 +40,3 @@ jobs:
       with:
         name: QuickSearch-plgx
         path: Release/QuickSearch.plgx
-
-  create_release:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Download the artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: QuickSearch-plgx
-        path: Release
-
-    - name: Create a draft release
-      uses: softprops/action-gh-release@v0.1.15
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: |
-          Release/QuickSearch.plgx
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      
